--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,11 @@ header, footer {
   background-color: #1f2937;
 }
 
+h1 {
+  font-size: 24px;
+  color: #f9faf8;
+}
+
 .hero-header {
   font-size: 48px;
   font-weight: bolder;
