--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ body {
   min-height: 100vh;
 }
 
+/* HEADER */
+
 nav {
   display: flex;
   justify-content: space-around;
@@ -20,6 +22,8 @@ ul {
   list-style-type: none;
   display: flex;
 }
+
+
 
 header, footer {
   background-color: #1f2937;
@@ -42,11 +46,15 @@ h1 {
   color: #f9faf8;
 }
 
+/* INFORMATION */
+
 .info {
   font-size: 36px;
   font-weight: bolder;
   color: #1f2937;
 }
+
+/* QUOTE */
 
 .quote-section {
   background-color: #e5e7eb;
@@ -54,6 +62,8 @@ h1 {
   font-style: italic;
   color: #1f2937;
 }
+
+/* CALL TO ACTION */
 
 .call-to-action {
   background-color: #3882f6;
@@ -72,10 +82,12 @@ button {
   color: #f9faf8;
 }
 
-.copyright {
-  color: #e5e7eb;
-}
+/* FOOTER */
 
 footer {
   margin-top: auto;
+}
+
+.copyright {
+  color: #e5e7eb;
 }
