--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,17 @@ h1 {
   margin-top: 1em
 }
 
+.cards {
+  display: flex;
+}
+
+.info-image {
+  border: 3px solid #3882f6;
+  width: 125px;
+  height: 125px;
+  border-radius: 8px;
+}
+
 /* QUOTE */
 
 .quote-section {
@@ -90,10 +101,12 @@ h1 {
 }
 
 .quote {
-  margin: 2em 5em;
+  margin: auto 5em;
 }
 
-
+.quote-author {
+  margin-left: 20em;
+}
 
 /* CALL TO ACTION */
 
