--- a/styles.css
+++ b/styles.css
@@ -46,6 +46,7 @@ header {
   color: #e5e7eb;
   font-size: 18px;
   flex: 1 1 auto;  
+  padding-bottom: 5em;
 }
 
 h1 {
@@ -66,6 +67,7 @@ h1 {
 .information-section {
   flex: 1 1 auto;
   text-align: center;
+  padding-bottom: 5em;
 }
 
 .info {
@@ -106,6 +108,7 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  padding: 1.5em;
 }
 
 .quote {
