--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  margin: auto 16em;
+  margin: 1em 16em;
   gap: 5px;
 }
   
