--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,13 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 30px;
+  padding: 2rem;
 }
 
 ul {
   list-style-type: none;
   display: flex;
-  gap: 2em;
+  gap: 2rem;
 }
 
 .header-container {
