--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,9 @@ ul {
   gap: 5rem;
 }
 
-.header-image {
-  background-color: #666;
+.img {
+  max-width: 800px;
+  height: auto;
   padding: 7rem 14rem;
 }
 
