commented our background color for header and footer, and added new color

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@ ul {
 
 header,
 footer {
-  background-color: #1f2937;
+  /* background-color: #1f2937; */
+  background-color: #451f1f;
 }
 
 header {
