made font face for JosefinSans Regular, added it to body and removed roboto font

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,12 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  font-family: "Roboto", sans-serif;
+  font-family: my-font;
+}
+
+@font-face {
+  font-family: my-font;
+  src: url(/fonts/JosefinSans-Regular.ttf);
 }
 
 /* HEADER */
