--- a/styles.css
+++ b/styles.css
@@ -39,8 +39,10 @@ ul {
 }
 
 .img {
-  max-width: 800px;
   padding: 7rem 14rem;
+  width: clamp(225px, 100%, 700px);
+  /* min-width: 250px;
+  min-height: auto; */
 }
 
 header,
