--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ ul {
 .hero-header {
   font-size: 3.5rem;
   font-weight: bolder;
-  color: #f9faf8;
+  color: var(--off-white);
 }
 
 .header-logo {
@@ -152,7 +152,7 @@ header {
 }
 
 h3 {
-  color: #f9faf8;
+  color: var(--off-white);
   margin: left;
 }
 
@@ -185,11 +185,11 @@ button {
   border-style: none;
   font-weight: bold;
   background-color: var(--pink);
-  color: #f9faf8;
+  color: var(--off-white);
 }
 
 .call-to-action-button {
-  border-color: #f9faf8;
+  border-color: var(--off-white);
   border-style: solid;
 }
 
@@ -206,11 +206,11 @@ a {
 
 a:link {
   text-decoration: none;
-  color: #f9faf8;
+  color: var(--off-white);
 }
 
 a:visited {
-  color: #f9faf8;
+  color: var(--off-white);
 }
 
 a:hover {
