--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,7 @@ header {
 .call-to-action {
   background-color: var(--off-white);
   background-image: url("images/wine-barrels.jpg");
+  background-size: 100%;
 }
 
 .cta-box {
