changed background-size from 100% to cover in .call-to-action

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ header {
 .call-to-action {
   background-color: var(--off-white);
   background-image: url("images/wine-barrels.jpg");
-  background-size: 100%;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
