--- a/styles.css
+++ b/styles.css
@@ -189,6 +189,7 @@ button {
   font-weight: bold;
   background-color: var(--pink);
   color: var(--off-white);
+  box-shadow: inset 1px 1px 5px;
 }
 
 .call-to-action-button {
