added background position center to .red-wine-card

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,7 @@ header {
 .red-wine-card {
   background-image: url("images/red-wine.jpg");
   background-size: cover;
+  background-position: center;
 }
 
 /* QUOTE */
