--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,12 @@ header {
   background-position: center;
 }
 
+.white-wine-card {
+  background-image: url("images/white-wine.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 /* QUOTE */
 
 .quote-section {
