made selector for rose-wine-card linked to rose-wine.jpg with other bg settings same as other info cards

--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,12 @@ header {
   background-position: center;
 }
 
+.rose-wine-card {
+  background-image: url("images/rose-wine.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 /* QUOTE */
 
 .quote-section {
