made .sparkling-wine-card selector with background image url to sparkling-wine jpg. Also made background position center and background size cover

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,12 @@ header {
   background-position: center;
 }
 
+.sparkling-wine-card {
+  background-image: url("images/sparkling-wine.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
 /* QUOTE */
 
 .quote-section {
